--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
 
 						<!-- Logo -->
 							<a href="index.html" class="logo">
-								<span class="fa fa-code"></span> <span class="title">Team</span>
+								<span class="fa fa-code"></span> <span class="title">Our Team</span>
 							</a>
 
 						<!-- Nav -->
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Team</h1>
+							<h1>Our Team</h1>
 
 							<div class="image main">
 								<img src="images/banner-image-2-1920x500.jpg" class="img-fluid" alt="" />
@@ -59,7 +59,7 @@
 									<div class="col-sm-3 text-center">
 										<img src="images/author-image-1-646x680.jpg" class="img-fluid" alt="" />
 
-										<h2 class="m-n">John Noe</h2>
+										<h2 class="m-n">Ishika Singh</h2>
 
 										<p>
 											CEO <br>
