--- a/About Page1 2.html
+++ b/About Page1 2.html
@@ -40,7 +40,7 @@
 						<div class="image main">
 							
 						</div>
-<center><img src="https://github.com/ishika-s123/Team-1/commit/24d6ff08b0e84a8a864a63bfc918fe3b7547e51d" alt="My Team" width="700" height="400"></center>
+<center><img src=https://github.com/ishika-s123/Team-1/commit/24d6ff08b0e84a8a864a63bfc918fe3b7547e51d alt="My Team" width="700" height="400"></center>
 
 						<p>We are a team of six women in STEM looking to explore the world of CS. We are excited to develop our understanding of computer science and coding through this class. 
  We look forward to creating projects and expanding our knowledge!</p>
