--- a/About Page1 2.html
+++ b/About Page1 2.html
@@ -40,7 +40,7 @@
 						<div class="image main">
 							
 						</div>
-<center><img src="https://photos.google.com/photo/AF1QipOd-D85BuAd8PNcHnLzQSB3JtKX0qwJXEnkPosc" alt="My Team" width="700" height="400"></center>
+<center><img src="https://photos.app.goo.gl/ozFGhc9ZADYDHu2JA" alt="My Team" width="700" height="400"></center>
 
 						<p>We are a team of six women in STEM looking to explore the world of CS. We are excited to develop our understanding of computer science and coding through this class. 
  We look forward to creating projects and expanding our knowledge!</p>
