--- a/TeamPages/Priyanka.html
+++ b/TeamPages/Priyanka.html
@@ -1,5 +1,5 @@
 <html><head>
-	<title>Team 1 | Ishika Singh</title>
+	<title>Team 1 | Priyanka Manglani</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 
 					<!-- Logo -->
 					<a href="team.html" class="logo">
-						<span class="fa fa-code"></span> <span class="title">Our Team</span>
+						<span class="fa fa-code"></span> <span class="title">Our Tean</span>
 					</a>
 
 					<!-- Nav -->
@@ -35,14 +35,13 @@
 			<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>About Ishika</h1>
+						<h1>About Priyanka</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53250284968_d987963799_m.jpg" class="img-fluid" alt="" />
+							<img src="https://live.staticflickr.com/65535/53249121977_ef9825333b_m.jpg" class="img-fluid" alt="" />
 						</div>
 
-						<p>A junior at AHS, loves astronomy and hopes to be an astronomer. She enjoys sleeping and watching movies in her free time.
-						</p>
+						<p>Priyanka: a junior at AHS, is interested in computer science and graphic design. Over the summer, she completed a course at Berkeley.  </p>
 						
 					</div>
 				</div>
