--- a/TeamPages/Sonal.html
+++ b/TeamPages/Sonal.html
@@ -1,5 +1,5 @@
 <html><head>
-	<title>Team 1 | Ishika Singh</title>
+	<title>Team 1 | Sonal Madala</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -35,14 +35,13 @@
 			<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>About Ishika</h1>
+						<h1>About Sonal</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53250284968_d987963799_m.jpg" class="img-fluid" alt="" />
+							<img src="https://live.staticflickr.com/65535/53249114282_b9ac9ce2de_m.jpg" class="img-fluid" alt="" />
 						</div>
 
-						<p>A junior at AHS, loves astronomy and hopes to be an astronomer. She enjoys sleeping and watching movies in her free time.
-						</p>
+						<p>Sonal: also a junior at AHS, went to Alaska over the summer and enjoys swimming. Her future goal is to study business and to travel the world.</p>
 						
 					</div>
 				</div>
