ad Ishika images

--- a/TeamPages/Ishika.html
+++ b/TeamPages/Ishika.html
@@ -37,12 +37,17 @@
 					<div class="inner">
 						<h1>About Ishika</h1>
 
-						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53250284968_d987963799_m.jpg" class="img-fluid" alt="" />
-						</div>
+						
+							<div class="image main">
+								<div class="row">
+									<img src="IMG_3954.jpeg" class="img-fluid" style="width:380px;height:450px;" />
+									<img src="IMG_4391.jpeg" class="img-fluid" style="width:650px;height:450px;" />
+									<img src="IMG_1475.jpeg" class="img-fluid" style="width:370px;height:450px;" />
+								</div>
+							</div>
 
-						<p>A junior at AHS, loves astronomy and hopes to be an astronomer. She enjoys sleeping and watching movies in her free time.
-						</p>
+						<h2>Ishika is a junior at AHS. She loves astronomy and hopes to be an astronomer. She enjoys sleeping, spending time with her friends, and watching movies in her free time.
+						</h2>
 						
 					</div>
 				</div>
