--- a/TeamPages/Ishika.html
+++ b/TeamPages/Ishika.html
@@ -40,9 +40,9 @@
 						
 							<div class="image main">
 								<div class="row">
-									<img src="IMG_3954.jpeg" class="img-fluid" style="width:380px;height:450px;" />
-									<img src="IMG_4391.jpeg" class="img-fluid" style="width:650px;height:450px;" />
-									<img src="IMG_1475.jpeg" class="img-fluid" style="width:370px;height:450px;" />
+									<img src="pics/IMG_3954.jpeg" class="img-fluid" style="width:380px;height:450px;" />
+									<img src="pics/IMG_4391.jpeg" class="img-fluid" style="width:650px;height:450px;" />
+									<img src="pics/IMG_1475.jpeg" class="img-fluid" style="width:370px;height:450px;" />
 								</div>
 							</div>
 
