--- a/TeamPages/Ishika.html
+++ b/TeamPages/Ishika.html
@@ -46,7 +46,7 @@
 								</div>
 							</div>
 
-						<h2>Ishika is a junior at AHS. She loves astronomy and hopes to be an astronomer. She enjoys sleeping, spending time with her friends, and watching movies in her free time.
+						<h2>Ishika is a junior at AHS. She loves astronomy and hopes to be an astronomer. She enjoys sleeping, spending time with her friends, and watching movies in her free time. She mainly contributed by setting up the team pages and upploading each othe recipes for our second project, expanding her knowledge on HTML and PHP.
 						</h2>
 						
 					</div>
