--- a/TeamPages/Priyanka.html
+++ b/TeamPages/Priyanka.html
@@ -41,7 +41,7 @@
 							<img src="https://live.staticflickr.com/65535/53249121977_ef9825333b_m.jpg" class="img-fluid" alt="" />
 						</div>
 
-						<p>Priyanka: a junior at AHS, is interested in computer science and graphic design. Over the summer, she completed a course at Berkeley.  </p>
+						<p>Priyanka, a junior at AHS, is interested in computer science and graphic design. Over the summer, she completed a course at Berkeley. I enjoy watching Netflix and love listening to music. For our Semester 1 project, she mainly contributed by creating the Tic-Tac-Toe game designed in HTML. She learned how to create this game by watching various YouTube videos and adding some syntax of her style. </p>
 						
 					</div>
 				</div>
