--- a/TeamPages/Sanjana.html
+++ b/TeamPages/Sanjana.html
@@ -41,7 +41,7 @@
 							<img src="https://live.staticflickr.com/65535/53250504305_691463465a_m.jpg" class="img-fluid" alt="" />
 						</div>
 
-						<p>Sanjana: a junior at AHS, is passionate about soccer, Legos, and robotics. Over the summer, she went backpacking in New Mexico. She aspires to become an engineer. </p>
+						<p>Sanjana, a junior at AHS enjoys robtics and plays on American's Varsity Soccer Team. She contributed by creating the slider for our third project and creating our database in MySQL.</p>
 						
 					</div>
 				</div>
