--- a/TeamPages/Varna.html
+++ b/TeamPages/Varna.html
@@ -2,9 +2,9 @@
 	<title>Team 1 | Varna Srinivasan</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="">
 	<!-- Wrapper -->
@@ -15,7 +15,7 @@
 				<div class="inner">
 
 					<!-- Logo -->
-					<a href="team.html" class="logo">
+					<a href="../team.php" class="logo">
 						<span class="fa fa-code"></span> <span class="title">Our Team</span>
 					</a>
 
@@ -38,7 +38,7 @@
 						<h1>About Varna</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53250301183_a7c2aac8ab_m.jpg" class="img-fluid" alt="" />
+							<img src="pics/Varna1.jpeg" class="img-fluid" alt="" />
 						</div>
 
 						<p>Varna: a junior at AHS, loves basketball and music. She enjoys traveling and recently visited Canada during the summer.</p>
