--- a/TeamPages/Sonal.html
+++ b/TeamPages/Sonal.html
@@ -2,9 +2,9 @@
 	<title>Team 1 | Sonal Madala</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="">
 	<!-- Wrapper -->
@@ -15,7 +15,7 @@
 				<div class="inner">
 
 					<!-- Logo -->
-					<a href="team.html" class="logo">
+					<a href="../team.php" class="logo">
 						<span class="fa fa-code"></span> <span class="title">Our Team</span>
 					</a>
 
@@ -38,7 +38,7 @@
 						<h1>About Sonal</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53249114282_b9ac9ce2de_m.jpg" class="img-fluid" alt="" />
+							<img src="pics/Sonal1.jpeg" class="img-fluid" alt="" />
 						</div>
 
 						<p>Sonal: also a junior at AHS, went to Alaska over the summer and enjoys swimming. Her future goal is to study business and to travel the world.</p>
