--- a/TeamPages/Sanjana.html
+++ b/TeamPages/Sanjana.html
@@ -2,9 +2,9 @@
 	<title>Team 1 | Sanjana Mohan</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="">
 	<!-- Wrapper -->
@@ -15,7 +15,7 @@
 				<div class="inner">
 
 					<!-- Logo -->
-					<a href="team.html" class="logo">
+					<a href="../team.php" class="logo">
 						<span class="fa fa-code"></span> <span class="title">Our Team</span>
 					</a>
 
@@ -38,7 +38,7 @@
 						<h1>About Sanjana</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53250504305_691463465a_m.jpg" class="img-fluid" alt="" />
+							<img src="pics/Sanjana1.jpeg" class="img-fluid" style="width:450px;height:450px;"alt="" />
 						</div>
 
 						<p>Sanjana, a junior at AHS enjoys robtics and plays on American's Varsity Soccer Team. She contributed by creating the slider for our third project and creating our database in MySQL.</p>
