--- a/TeamPages/Priyanka.html
+++ b/TeamPages/Priyanka.html
@@ -2,9 +2,9 @@
 	<title>Team 1 | Priyanka Manglani</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="">
 	<!-- Wrapper -->
@@ -15,8 +15,8 @@
 				<div class="inner">
 
 					<!-- Logo -->
-					<a href="team.html" class="logo">
-						<span class="fa fa-code"></span> <span class="title">Our Tean</span>
+					<a href="../team.php" class="logo">
+						<span class="fa fa-code"></span> <span class="title">Our Team</span>
 					</a>
 
 					<!-- Nav -->
@@ -38,7 +38,7 @@
 						<h1>About Priyanka</h1>
 
 						<div class="image main">
-							<img src="https://live.staticflickr.com/65535/53249121977_ef9825333b_m.jpg" class="img-fluid" alt="" />
+							<img src="pics/Priyanka1.jpeg" class="img-fluid" style="width:450px;height:450px;" alt="" />
 						</div>
 
 						<p>Priyanka, a junior at AHS, is interested in computer science and graphic design. Over the summer, she completed a course at Berkeley. I enjoy watching Netflix and love listening to music. For our Semester 1 project, she mainly contributed by creating the Tic-Tac-Toe game designed in HTML. She learned how to create this game by watching various YouTube videos and adding some syntax of her style. </p>
