--- a/TeamPages/Ishika.html
+++ b/TeamPages/Ishika.html
@@ -15,7 +15,7 @@
 				<div class="inner">
 
 					<!-- Logo -->
-					<a href="team.html" class="logo">
+					<a href="../team.php" class="logo">
 						<span class="fa fa-code"></span> <span class="title">Our Team</span>
 					</a>
 
