change samjana description

--- a/TeamPages/Sanjana.html
+++ b/TeamPages/Sanjana.html
@@ -42,7 +42,7 @@
 						</div>
 
 						<p>Sanjana, a junior at AHS enjoys robtics and plays on American's Varsity Soccer Team. She contributed by creating the slider for our third project and creating our database in MySQL.</p>
-						
+						<p>She is a resident rat who loves cars</p>
 					</div>
 				</div>
 
